--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -347,7 +347,7 @@ allows us to write the stabilization term as
 
 The integral here is precisely the same as that on the right hand side of Equation~\eqref{eq:weak_eigen}, which was discretized as the matrix $M$.
 
-Indeed, if we discretize the Stokes system with the quasi-implicit stabilization term, we find
+If we discretize the Stokes system with the quasi-implicit stabilization term, we find
 a new generalized eigenvalue problem:
 
 \begin{equation}
