--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -43,7 +43,7 @@
 }
 
 @article{crameri2012comparison,
-  title={A comparison of numerical surface topography calculations in geodynamic modelling: An evaluation of the ‘sticky air’method},
+  title={A comparison of numerical surface topography calculations in geodynamic modelling: An evaluation of the `sticky air' method},
   author={Crameri, F and Schmeling, H and Golabek, GJ and Duretz, T and Orendt, R and Buiter, SJH and May, DA and Kaus, BJP and Gerya, TV and Tackley, PJ},
   journal={Geophysical Journal International},
   volume={189},
