Add figure for convergence of quasi-implicit scheme

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -667,11 +667,19 @@ found it to conserve mass more accurately than algebraic techniques for evaluati
 Similar results were found by \citet{fullsack1995arbitrary}.
 
 \section{Results}
+
 \begin{figure*}
 \includegraphics[width=0.9\textwidth]{figures/timestep_convergence.pdf}
 \caption{Convergence test with timestep size.}
 \label{fig:timestep_convergence}
 \end{figure*}
+
+\begin{figure*}
+\includegraphics[width=0.9\textwidth]{figures/timestep_convergence_qi.pdf}
+\caption{Convergence test with timestep size, quasi-implicit}
+\label{fig:timestep_convergence_qi}
+\end{figure*}
+
 \begin{itemize}
 \item Crameri benchmarks
 \item comparison between stabilization schemes (stability)
