--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -31,6 +31,17 @@
   year = {2015},
 }
 
+@article{schmeling2008benchmark,
+  title={A benchmark comparison of spontaneous subduction models—towards a free surface},
+  author={Schmeling, H and Babeyko, AY and Enns, A and Faccenna, C and Funiciello, F and Gerya, T and Golabek, GJ and Grigull, S and Kaus, BJP and Morra, G and others},
+  journal={Physics of the Earth and Planetary Interiors},
+  volume={171},
+  number={1},
+  pages={198--223},
+  year={2008},
+  publisher={Elsevier}
+}
+
 @article{kaus2010stabilization,
   title={A stabilization algorithm for geodynamic numerical simulations with a free surface},
   author={Kaus, Boris JP and M{\"u}hlhaus, Hans and May, Dave A},
@@ -51,6 +62,16 @@
   pages={38--54},
   year={2012},
   publisher={Oxford University Press}
+}
+
+@article{crameri2012free,
+  title={A free plate surface and weak oceanic crust produce single-sided subduction on Earth},
+  author={Crameri, Fabio and Tackley, PJ and Meilick, Irena and Gerya, TV and Kaus, BJP},
+  journal={Geophysical Research Letters},
+  volume={39},
+  number={3},
+  year={2012},
+  publisher={Wiley Online Library}
 }
 
 @article{quinquis2011role,
