--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -42,6 +42,16 @@
   publisher={Elsevier}
 }
 
+@article{richards1984geoid,
+  title={Geoid anomalies in a dynamic Earth},
+  author={Richards, Mark A and Hager, Bradford H},
+  journal={Journal of Geophysical Research},
+  volume={89},
+  number={B7},
+  pages={5987--6002},
+  year={1984}
+}
+
 @article{kaus2010stabilization,
   title={A stabilization algorithm for geodynamic numerical simulations with a free surface},
   author={Kaus, Boris JP and M{\"u}hlhaus, Hans and May, Dave A},
@@ -50,6 +60,16 @@
   number={1},
   pages={12--20},
   year={2010},
+  publisher={Elsevier}
+}
+
+@article{baumann2014constraining,
+  title={Constraining effective rheology through parallel joint geodynamic inversion},
+  author={Baumann, Tobias S and Kaus, Boris JP and Popov, Anton A},
+  journal={Tectonophysics},
+  volume={631},
+  pages={197--211},
+  year={2014},
   publisher={Elsevier}
 }
 
@@ -71,6 +91,16 @@
   volume={39},
   number={3},
   year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{duretz2011discretization,
+  title={Discretization errors and free surface stabilization in the finite difference and marker-in-cell method for applied geodynamics: A numerical study},
+  author={Duretz, T and May, DA and Gerya, TV and Tackley, PJ},
+  journal={Geochemistry, Geophysics, Geosystems},
+  volume={12},
+  number={7},
+  year={2011},
   publisher={Wiley Online Library}
 }
 
@@ -207,6 +237,17 @@
   year={1977},
   publisher={McGraw-hill London}
 }
+
+@article{hager1985lower,
+  title={Lower mantle heterogeneity, dynamic topography and the geoid},
+  author={Hager, Bradford H and Clayton, Robert W and Richards, Mark A and Comer, Robert P and Dziewonski, Adam M},
+  journal={Nature},
+  volume={313},
+  number={6003},
+  pages={541--545},
+  year={1985}
+}
+
 @book{leveque2007finite,
   title={Finite difference methods for ordinary and partial differential equations: steady-state and time-dependent problems},
   author={LeVeque, Randall J},
