Add figure for sensitivity to relaxation parameter

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -773,6 +773,13 @@ with timestep.
 \label{fig:timestep_convergence_qi}
 \end{figure*}
 
+\begin{figure*}
+\includegraphics[width=0.9\textwidth]{figures/tau_sensitivity.pdf}
+\caption{Sensitivity to $\tau^*$.}
+\label{fig:tau_sensitivity}
+\end{figure*}
+
+
 \section{Discussion}
 
 %% The Appendices part is started with the command \appendix;
